--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,15 @@
 @import "tailwindcss";
+/* * {
+  overflow-x: hidden;
+} */
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @theme inline {
@@ -19,8 +26,10 @@
   }
 }
 
-body {
+
+ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+   overflow-x: hidden; 
 }
